# Notion-Spec-To-Code

./: README.md
cli/: .gitignore  DESIGN.md  pyproject.toml
cli/src/: generator.py  loop.py  main.py  merge.py  parser.py  poller.py
cli/src/notion_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/tests/: test_generator.py  test_loop.py  test_merge.py  test_parser.py  test_poller.py
mcp/: .mcp.json  CLAUDE.md  convention.py  parser.py  requirements.txt  server.py
